# profile.mobile.platform.core.uifw.elm-demo-tizen-mobile

./: CMakeLists.txt  Makefile.am  autogen.sh  configure.ac  org.tizen.elm-demo-tizen-mobile.manifest  org.tizen.elm-demo-tizen-mobile.xml  org.tizen.elm-demo-tizen-mobile.xml.in  org.tizen.ui-controls.manifest  org.tizen.ui-controls.xml  org.tizen.ui_controls.xml
data/: Makefile.am  coding_convention.txt  elm-demo-tizen-mobile.uri  ui-controls.uri
data/edc/: Makefile.am  button.edc  layout.edc
data/images/: Makefile.am
edc_resource/: button.edc  check.edc  colorselector.edc  ctxpopup.edc  datetime.edc  entry.edc  genlist.edc  handler.edc  label.edc  layout.edc  multibuttonentry.edc  nocontents.edc  pagecontrol.edc  popup_custom.edc  progressbar.edc  radio.edc  slider.edc  svg.edc
edc_resource/accessibility/: screen_reader.edc
edc_resource/accessibility/screen_reader/: access_object.edc  custom_frame.edc  description.edc  embeded_ui.edc  primitives_layout.edc  reading_order.edc
edc_resource/default/: my_button.edc
edc_resource/default/inc/: my_button_header.edc
inc/: main.h
packaging/: elm-demo-tizen-mobile.spec  org.tizen.elm-demo-tizen-mobile.spec  ui-controls.service  ui-controls.spec  ui_controls.spec
po/: CMakeLists.txt  en_US.po  it_IT.po
res/: elm-demo-tizen-mobile.edc  ui-controls.edc  ui_controls.edc
src/: Makefile.am  accessibility.c  bg.c  button.c  calendar.c  check.c  checkbox.c  colorselector.c  conformant.c  ctxpopup.c  datetime.c  drawer.c  entry.c  fastscroll.c  flipselector.c  gengrid.c  genlist.c  handler.c  hoversel.c  index.c  indicator.c  label.c  label_colorstyles.c  label_ellipsis.c  label_fontsizes.c  label_linebreakmodes.c  label_slide.c  label_textstyles.c  layout.c  main.c  main.h  map.c  multibuttonentry.c  naviframe.c  nocontents.c  notify.c  pagecontrol.c  pagecontrol_horizontal.c  pagecontrol_horizontal_loop.c  panel.c  (+15 more)
src/accessibility/: app_toolbox.c  screen_reader.c  shortcuts.c
src/accessibility/screen_reader/: access_object.c  custom_frame.c  description.c  embeded_ui.c  primitives_ui.c  reading_info.c  reading_list.c  reading_order.c
