imagedir = $(prefix)/data/images/
image_DATA = background.png ico_arrow_down.png ico_arrow_up.png ico_dropdown_menu_check.png\
             ico_dropdown_menu_open_arrow.png ico_lock_nor.png sky.jpg\
             app_ico_default_app.png app_ico_fb.png app_ico_history.png app_ico_music.png\
             app_ico_noti.png app_ico_photo_video.png app_ico_setting.png app_ico_wb.png
